--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \usepackage[OT4]{fontenc}
 \usepackage{url}
 \usepackage{cite}
+\usepackage{hyperref}
 
 \title{Atrykuł tekstowy}
 \author{Ignacy Ambroziak}
